# CMake

./: CMakeLists.txt  Demo.cpp  LICENSE  README.md
.github/workflows/: cmake.yml
01_Simple_CMake/: CMakeLists.txt
01_Simple_CMake/inc/: sample.h
01_Simple_CMake/src/: main.cpp  sample.cpp
